[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/themeMFRG.tres" type="Theme" id=1]
[ext_resource path="res://scripts/shaders/shader_contrast.tres" type="Shader" id=3]
[ext_resource path="res://scripts/select_lang/select_lang.gd" type="Script" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 3 )
shader_param/contrast = 1.0

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("ViewportContainer/Viewport")

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1920, 1080 )
handle_input_locally = false
render_target_v_flip = true
render_target_update_mode = 3

[node name="ColorRect2" type="ColorRect" parent="ViewportContainer/Viewport"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="ViewportContainer/Viewport/ColorRect2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -949.0
margin_top = 16.0
margin_right = 950.0
margin_bottom = 100.0
theme = ExtResource( 1 )
text = "Label_Lang"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ViewportContainer/Viewport/ColorRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -86.0
margin_right = 250.0
margin_bottom = 86.0

[node name="Button_EN" type="Button" parent="ViewportContainer/Viewport/ColorRect2/VBoxContainer"]
margin_right = 500.0
margin_bottom = 84.0
theme = ExtResource( 1 )
text = "B_Lang_EN"
icon_align = 1

[node name="Button_PT_BR" type="Button" parent="ViewportContainer/Viewport/ColorRect2/VBoxContainer"]
margin_top = 88.0
margin_right = 500.0
margin_bottom = 172.0
theme = ExtResource( 1 )
text = "B_Lang_PT_BR"
icon_align = 1

[node name="ColorRect" type="ColorRect" parent="ViewportContainer/Viewport"]
visible = false
material = SubResource( 4 )
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 1920, 1080 )
color = Color( 0, 0, 0, 1 )

[node name="Icon" type="Sprite" parent="ViewportContainer/Viewport/ColorRect"]
position = Vector2( 800, 544 )
texture = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1920, 1080 )
texture = SubResource( 2 )

[connection signal="focus_entered" from="ViewportContainer/Viewport/ColorRect2/VBoxContainer/Button_EN" to="." method="_on_Button_EN_focus_entered"]
[connection signal="mouse_entered" from="ViewportContainer/Viewport/ColorRect2/VBoxContainer/Button_EN" to="." method="_on_Button_EN_mouse_entered"]
[connection signal="pressed" from="ViewportContainer/Viewport/ColorRect2/VBoxContainer/Button_EN" to="." method="_on_Button_EN_pressed"]
[connection signal="focus_entered" from="ViewportContainer/Viewport/ColorRect2/VBoxContainer/Button_PT_BR" to="." method="_on_Button_PT_BR_focus_entered"]
[connection signal="mouse_entered" from="ViewportContainer/Viewport/ColorRect2/VBoxContainer/Button_PT_BR" to="." method="_on_Button_PT_BR_mouse_entered"]
[connection signal="pressed" from="ViewportContainer/Viewport/ColorRect2/VBoxContainer/Button_PT_BR" to="." method="_on_Button_PT_BR_pressed"]
